# crafting-table

./: .gitignore  AGENTS.md  README.md  logo.local.json.example
.agents/skills/codex-remote-companion/: SKILL.md
.codex/environments/: environment.toml
CTCore/: Cargo.toml  README.md
CTCore/src/: lib.rs  swift_bindings.rs
CTCore/src/codex_remote_control/: client.rs  contract.rs  host_runtime.rs  mod.rs
CTCore/src/codex_remote_control/server/: app_server.rs  codex.rs  config.rs  ffi.rs  host_runtime.rs  mod.rs  models.rs  routes.rs  runtime.rs  thread_store.rs  turn_events.rs
CTCore/src/inkcre_graph/: mod.rs
CTCore/src/local_llm_core/: mod.rs
CTCore/src/portable_config/: mod.rs
CTCore/tests/: codex_remote_control.rs  codex_remote_server.rs  inkcre_graph.rs  local_llm_core.rs  portable_config.rs
CTCore/tests/fixtures/: portable-config.invalid.json  portable-config.valid.json
Companion/: Cargo.toml  README.md
Companion/scouts/macos/: Package.swift
Companion/scouts/macos/Sources/MacOSScout/: AccessibilityReader.swift  Models.swift  main.swift
Companion/scouts/windows/: CodexWindowsScout.csproj  Models.cs  Program.cs  README.md  UiaScout.cs
Companion/src/: app_server.rs  codex.rs  config.rs  desktop_scout.rs  host_runtime.rs  lib.rs  main.rs  models.rs  routes.rs  runtime.rs  thread_store.rs  turn_events.rs
Companion/tests/: runtime_embedding.rs
CraftingTable/: AGENTS.md
CraftingTable.xcodeproj/: project.pbxproj
CraftingTable/App/: CraftingTableApp.swift  RootView.swift
CraftingTable/Features/Capture/: CaptureSheets.swift
CraftingTable/Features/CodexRemote/: CodexRemoteClient.swift  CodexRemoteScreen.swift  CodexRemoteThreadPage.swift
CraftingTable/Features/GoalForest/: GoalForestScreen.swift
CraftingTable/Features/Home/: HomeView.swift
CraftingTable/Features/LocalLLM/: HuggingFaceGGUFSource.swift  LlamaCppRuntimeAdapter.swift  LocalLLMFileVerifier.swift  LocalLLMHTTPServer.swift  LocalLLMModels.swift  LocalLLMScreen.swift  LocalLLMServerController.swift  LocalLLMStore.swift  OpenAIResponsesModels.swift
CraftingTable/Features/RemoteControl/: RemoteControlScreen.swift
CraftingTable/Features/Shared/: BackendStores.swift  WorkspaceModels.swift  WorkspaceStore.swift
CraftingTable/Features/Shell/: SidebarView.swift
CraftingTable/Features/WorkSession/: WorkSessionScreen.swift
Workbench/: AGENTS.md
Workbench.xcodeproj/: project.pbxproj
Workbench.xcodeproj/xcshareddata/xcschemes/: Workbench.xcscheme
Workbench/App/: RootView.swift  WorkbenchApp.swift
Workbench/Features/Home/: HomeView.swift
clients/: README.md
clients/android/: README.md  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/ctcore-bindings/: .gitignore  build.gradle.kts
clients/android/gradle/: libs.versions.toml
clients/apple/: AGENTS.md
clients/apple/CraftingTable.xcodeproj/: project.pbxproj
clients/apple/iPad/: AGENTS.md
clients/apple/macOS/: AGENTS.md
clients/windows/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
clients/windows/native/: Cargo.toml
clients/windows/native/src/: host_runtime.rs  lib.rs  main.rs
clients/windows/src/: main.ts  styles.css
clients/windows/src-tauri/: Cargo.toml  tauri.conf.json
clients/windows/src-tauri/capabilities/: default.json
clients/windows/src-tauri/src/: main.rs
docs/00-meta/: concepts.md  growth-rules.md  index.md  input-artifact.md  input-constraint.md  input-intent.md  input-reality.md  mode-a-explore.md  mode-b-solidify.md  mode-c-execute.md  mode-d-diagnose.md
docs/10-prd/: early-product-truths.md  glossary.md  index.md
docs/20-product-tdd/: claim-realization-matrix.md  cross-unit-contracts.md  index.md  platform-build-boundaries.md  system-state-and-authority.md  unit-topology.md
scripts/: build-ctcore-android.sh  build-ctcore-apple.sh  build-ctcore-ios.sh  codex-host-runtime.sh  codex-remote-companion.sh  generate-logo-assets.swift  launch-ipad-device.sh  launch-ipad-simulator.sh  run-android-client.sh  run-macos-client.sh  run-windows-client.ps1  run-windows-client.sh  smoke-ctcore-swift-binding.sh
scripts/windows-smoke/: run-codex-windows-scout.sh
tasks/: 0001-bootstrap-foundation.md  0002-product-exploration.md  README.md
tasks/0001-bootstrap-foundation/: README.md
tasks/0002-product-exploration/: README.md
tasks/0006-v0.1.0/: README.md  goal-forest-exploration.md  information-architecture.md  low-fidelity-layout-packet.md  minimum-screen-inventory.md  remote-control-session-linkage.md  scope.md  session-handoff.md  transition-map.md  user-journeys.md  work-session-and-goal-forest-language.md
tasks/0007-svc-v9.5-alignment/: README.md
tasks/0008-v0.1.0-doc-growth-scaffold/: README.md
tasks/0009-crafting-table-rename/: README.md
tasks/0010-v0.1.0-persistence-data-strategy/: README.md
tasks/0011-v0.1.0-remote-control-depth-terminal/: README.md
tasks/0012-v0.1.0-codex-remote-handoff/: README.md  composer-controls-layout-diagnosis.md  desktop-handoff-findings.md  handoff-architecture.md  implementation-plan.md  live-agent-message-boundaries.md  live-event-rendering-diagnosis.md  permission-mode-findings.md  semantic-handoff-findings.md  slice-13-protocol-findings.md  stream-abort-diagnosis.md  streaming-turns-findings.md  thread-creation-findings.md  thread-detail-space-layout.md  thread-page-findings.md  windows-smoke-findings.md
tasks/0013-v0.1.0-local-llm-http-server/: README.md
tasks/0014-everywhere-control-surface-foundation/: README.md  codex-host-runtime-boundary.md  current-coupling-inventory.md  implementation-plan.md  inkcre-goal-capture-mapping.md  ipad-ctcore-integration-plan.md  local-llm-lifecycle-boundary.md  platform-client-architecture.md
tasks/0015-codex-remote-rich-message-rendering/: README.md
tasks/0016-codex-message-list-experience/: README.md  app-server-tool-call-findings.md
tasks/0017-android-codex-remote-parity/: README.md
tasks/0018-windows-native-client-ctcore/: README.md  build-debug-assessment.md  ctcore-windows-boundary.md  implementation-plan.md
(+51 files in other folders)
