[package]
name = "ct-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
portable-config = ["dep:serde", "dep:serde_json", "dep:url"]
codex-remote-control-server = ["dep:serde", "dep:serde_json", "dep:tokio"]
codex-remote-control-client = ["dep:serde", "dep:serde_json"]
inkcre-graph = ["dep:serde", "dep:serde_json"]
local-llm-core = ["dep:serde", "dep:serde_json"]
swift-bindings = ["portable-config", "dep:uniffi"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
uniffi = { version = "0.31.1", features = ["cli"], optional = true }
tokio = { version = "1.45", features = ["rt", "sync"], optional = true }
url = { version = "2.5", optional = true }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["swift-bindings"]
